--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     </nav>
     
  
-     <section id="sec1" class="sec1 bg-[url('portfolio_front_img.png')] xs:bg-contain sm:bg-contain h-[100vh] w-full object-contain bg-no-repeat xs:w-[100%] xl:w-[100%]
+     <section id="sec1" class="sec1  xs:bg-contain sm:bg-contain h-[100vh] w-full object-contain bg-no-repeat xs:w-[100%] xl:w-[100%]
        sm:w-[100%]  scroll-smooth " >
-
-         <h1 class="text-black  xl:text-[4.2rem] flex  xl:relative xl:top-[57%] xl:left-[20%] xl:w-[65vw] font-semibold font-outfit 
-         xs:w-[75%] sm:w-[75%] xs:text-[65px] sm:text-[70px] sm:relative sm:left-[15%] sm:top-[50%] xs:relative xs:left-[15%] xs:top-[50%] ">Some Things I've Worked On</h1>
+          <img  src="portfolio_front_img.png" class="object-contain"/>
+         <h1 class="text-black  xl:text-[4.2rem] flex  xl:relative xl:top-[2%] xl:left-[20%] xl:w-[65vw] font-semibold font-outfit 
+         xs:w-[78%] sm:w-[75%] xs:text-[65px] sm:text-[70px] sm:relative sm:left-[15%] sm:top-[5%] xs:relative xs:left-[10%] xs:top-[5%] ">Some Things I've Worked On</h1>
  
-           <div class='flex relative top-[60%] sm:w-[100%] xs:w-[100%]'>
+           <div class='flex relative top-[15%] sm:w-[100%] xs:w-[100%]'>
  
            <div class="xl:h-[70vh] xl:w-[22vw] mx-[20px]  rounded-xl xs:w-[25%] sm:w-[25%] ">
              <a href="https://medium.com/@mishraadis1620/company-sales-analysis-dashboard-05b6b63e351b">  <img class="xl:h-[60vh]  xl:w-[38vw] shadow-2xl rounded-xl object-fill hover:contrast-125 xs:w-[100vw] sm:w-[100%] " src="proj_img1.png"  alt='ii'/>
@@ -108,9 +108,9 @@
              <div class="resume_sec xl:w-[50vw] xs:w-[50%]  sm:w-[50%]    ">
                <img src="ADITI MISHRA.png" class="xl:w-[45vw] xl:h-[109vh] relative xl:left-[4%] shadow-2xl sm:w-[100%] xs:h-[97%] xs:w-[100%]  sm:h-[97%] " alt="imgresume"  />
                </div>
-               <div class="about_sec relative xl:w-[50vw] xs:w-[50%] sm:w-[50%]">
-                 <h1 class='"text-black  text-[80px] relative  left-[13%] w-[15vw] font-bold font-outfit sm:left-[10%] sm:text-[70px] xs:text-[60px]'>Resume/About</h1>
-                 <img src="About_Sec.png" class="xl:w-[45vw]  z-[-10] h-[90vh] relative left-[4%]  shadow-2xl rounded-2xl sm:absolute sm:left-[4%] xs:w-[96%] sm:w-[95%]"  alt="imgabout" />
+               <div class="about_sec relative xl:w-[50%] xs:w-[50%] sm:w-[50%]">
+                 <h1 class='"text-black  xl:text-[80px] relative  left-[13%] w-[15vw] font-bold font-outfit sm:left-[10%] sm:text-[65px] xs:text-[55px] xs:left-[7%]'>Resume/About</h1>
+                 <img src="About_Sec.png" class="xl:w-[45vw]  z-[-10] h-[90vh] relative left-[3%]  shadow-2xl rounded-2xl sm:absolute sm:left-[4%] xs:w-[96%] sm:w-[95%]"  alt="imgabout" />
                <a href="https://github.com/aditi1620/MyResume"><button class="cursor-pointer text-lg absolute xl:right-[15%] xl:top-[79.8%] transition-all bg-blue-500 text-white xl:px-12 xl:py-2 rounded-lg border-blue-600 border-b-[4px] hover:brightness-110 hover:-translate-y-[1px] hover:border-b-[8px] active:border-b-[4px] active:brightness-90 active:translate-y-[2px] font-bold font-outfit sm:right-[15%]
                sm:top-[79%] sm:px-12 sm:py-2 xs:top-[80%] xs:px-12 xs:py-2 xs:right-[10%]"> My Full Resume</button>
  </a>
@@ -118,7 +118,7 @@
  
        </section>
         
-         <footer class="xxl:h-[9vh] bg-[#24231d] flex text-white p-[9px] gap-[23rem] sm:w-[100%] sm:h-[19vh]  sm:flex sm:gap-[19rem] xs:w-[100%] xs:gap-[17rem] ">
+         <footer class="xl:h-[9vh] xl:w-[100vw] bg-[#24231d] flex text-white p-[9px] xl:gap-[20rem] sm:w-[100%] sm:h-[19vh]  sm:flex sm:gap-[19rem] xs:w-[100%] xs:gap-[17rem] ">
            <h1 class="text-lg font-semibold font-outfit sm:w-[35%] sm:text-xl xs:text-lg xs:w-[40vw] ">&copy;Copyright 2024, All rights reserved  </h1>
            <h1 class="text-lg font-semibold animate-pulse font-outfit sm:w-[45%] sm:text-xl ">Thanks for visiting!</h1>
            <a href="https://mail.google.com/"><h1 class="text-lg font-semibold font-outfit sm:w-[35%] sm:text-xl ">Contact:aditimishra1623@gmail.com</h1></a>
