--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
          <h1 class="text-black  xl:text-[4.2rem] flex  xl:relative xl:top-[2%] xl:left-[20%] xl:w-[65vw] font-semibold font-outfit 
          xs:w-[78%] sm:w-[78%] xs:text-[65px] sm:text-[65px] sm:relative sm:left-[10%] sm:top-[5%] xs:relative xs:left-[10%] xs:top-[5%] ">Some Things I've Worked On</h1>
  
-           <div class='flex relative top-[15%] sm:w-[100%] xs:w-[100%]'>
+           <div class='flex relative top-[5%] xl:w-[100vw] sm:w-[100%] xs:w-[100%]'>
  
-           <div class="xl:h-[70vh] xl:w-[22vw] mx-[20px]  rounded-xl xs:w-[25%] sm:w-[25%] ">
-             <a href="https://medium.com/@mishraadis1620/company-sales-analysis-dashboard-05b6b63e351b">  <img class="xl:h-[60vh]  xl:w-[38vw] shadow-2xl rounded-xl object-fill hover:contrast-125 xs:w-[100vw] sm:w-[100%] " src="proj_img1.png"  alt='ii'/>
-               <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] sm:w-[100%]">Company Sales Dashboard</h1></a>
+           <div class="xl:h-[70vh] xl:w-[22vw] mx-[20px]  rounded-xl xs:w-[25%]  sm:w-[25%] ">
+             <a href="https://medium.com/@mishraadis1620/company-sales-analysis-dashboard-05b6b63e351b">  <img class="xl:h-[60vh]  xl:w-[38vw] shadow-2xl rounded-xl object-fill hover:contrast-125 xs:w-[100vw] xs:h-[80%] sm:h-[80%] sm:w-[100%] " src="proj_img1.png"  alt='ii'/>
+               <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] xs:py-3 xs:text-4xl sm:w-[100%] sm:py-4 sm:text-4xl">Company Sales Dashboard</h1></a>
              </div>
              <div class="xl:h-[70vh] xl:w-[22vw]  mx-[20px] rounded-xl xs:w-[25%] sm:w-[25%] ">
-             <a href="https://medium.com/@mishraadis1620/electric-vehicles-market-size-analysis-using-python-2024-a61e163c45b7">  <img class="xl:h-[60vh]  xl:w-[38vw] shadow-2xl rounded-xl object-fill hover:contrast-125 xs:w-[100vw] sm:w-[100%]" src="proj_img2.png" alt='ii'/>
-               <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] sm:w-[100%]">E-Vehicle Market Analysis</h1></a>
+             <a href="https://medium.com/@mishraadis1620/electric-vehicles-market-size-analysis-using-python-2024-a61e163c45b7">  <img class="xl:h-[60vh]  xl:w-[38vw] shadow-2xl rounded-xl object-fill hover:contrast-125 xs:w-[100vw] xs:h-[80%] sm:h-[80%] sm:w-[100%]" src="proj_img2.png" alt='ii'/>
+               <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] xs:py-3 xs:text-4xl sm:w-[100%] sm:py-4 sm:text-4xl">E-Vehicle Market Analysis</h1></a>
              </div>
              <div class="xl:h-[70vh] xl:w-[22vw] mx-[20px]  rounded-xl  xs:w-[25%] sm:w-[25%] ">
-             <a href="https://medium.com/@mishraadis1620/impacts-of-remote-work-e6abafc08628">  <img class="xl:h-[60vh]  xl:w-[38vw] shadow-2xl rounded-xl object-fill hover:contrast-125 xs:w-[100vw] sm:w-[100%] " src="proj_img9.PNG" alt='ii'/>
-               <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%]">Impact of Remote </h1>
-               <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%]"> Work</h1></a>
+             <a href="https://medium.com/@mishraadis1620/impacts-of-remote-work-e6abafc08628">  <img class="xl:h-[60vh]  xl:w-[38vw] shadow-2xl rounded-xl object-fill hover:contrast-125 xs:w-[100vw] sm:w-[100%] xs:h-[80%] sm:h-[80%] " src="proj_img9.PNG" alt='ii'/>
+               <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] xs:py-3 xs:text-4xl sm:py-4 sm:text-4xl">Impact of Remote </h1>
+               <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] xs:text-4xl sm:py-[-10px] sm:text-4xl"> Work</h1></a>
              </div>
            <div class="xl:h-[70vh] xl:w-[22vw]  mx-[20px] rounded-xl  xs:w-[25%] sm:w-[25%] ">
-            <a href="https://medium.com/@mishraadis1620/zomato-sales-analysis-951693f858ce"> <img class="xl:h-[60vh]  xl:w-[38vw] shadow-2xl rounded-xl object-fill hover:contrast-125 xs:w-[100vw] sm:w-[100%] " src="proj_img4.png" alt='ii'/>
-             <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%]">Zomato Sale Analysis Dashboard</h1></a>
+            <a href="https://medium.com/@mishraadis1620/zomato-sales-analysis-951693f858ce"> <img class="xl:h-[60vh]  xl:w-[38vw] shadow-2xl rounded-xl object-fill hover:contrast-125 xs:w-[100vw] xs:h-[80%] sm:w-[100%] sm:h-[80%]" src="proj_img4.png" alt='ii'/>
+             <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] xs:py-3 xs:text-4xl sm:py-4 sm:text-4xl">Zomato Sale Analysis Dashboard</h1></a>
            </div>
          </div>
  
@@ -61,23 +61,23 @@
  
  
      <section id="sec2" class="sec2 h-[110vh] w-full xs:w-[100%] sm:w-[100%] ">
-     <div class=' flex relative top-[43%] sm:w-[100%] xs:w-[100%]'>
+     <div class=' flex relative top-[43%] sm:w-[100%] xs:w-[100%] xs:top-[35%] sm:top-[33%]'>
  
  <div class="xl:h-[70vh] xl:w-[22vw] mx-[20px]  rounded-xl xs:w-[25%] sm:w-[25%]  ">
-    <a href="https://medium.com/@mishraadis1620/model-dataset-dashboard-324872c782c8"> <img class="xl:h-[60vh] xl:w-[38vw] shadow-2xl rounded-xl object-fill  hover:contrast-125 xs:w-[100%] xs:h-[70%] sm:w-[100%]" src="proj_img5.png" alt='ii'/>
-     <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%]">Model Dataset Dashboard</h1></a>
+    <a href="https://medium.com/@mishraadis1620/model-dataset-dashboard-324872c782c8"> <img class="xl:h-[60vh] xl:w-[38vw] shadow-2xl rounded-xl object-fill  hover:contrast-125 xs:w-[100%]  xs:h-[80%] sm:w-[100%] sm:h-[80%]" src="proj_img5.png" alt='ii'/>
+     <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] xs:py-3 xs:text-4xl">Model Dataset Dashboard</h1></a>
    </div>
    <div class="xl:h-[70vh] xl:w-[22vw]  mx-[20px] rounded-xl xs:w-[25%] sm:w-[25%]  ">
-    <a href="https://medium.com/@mishraadis1620/healthcare-cost-analysis-3c1c8cd7cf6c"> <img class="xl:h-[60vh] xl:w-[38vw] shadow-2xl rounded-xl object-fill  hover:contrast-125 xs:w-[100%] sm:w-[100%]" src="proj_img7.PNG" alt='ii'/>
-     <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%]">Healthcare Cost Analysis</h1></a>
+    <a href="https://medium.com/@mishraadis1620/healthcare-cost-analysis-3c1c8cd7cf6c"> <img class="xl:h-[60vh] xl:w-[38vw] shadow-2xl rounded-xl object-fill  hover:contrast-125 xs:w-[100%] xs:h-[80%] sm:w-[100%] sm:h-[80%]" src="proj_img7.PNG" alt='ii'/>
+     <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] xs:py-3 xs:text-4xl sm:py-4 sm:text-4xl">Healthcare Cost Analysis</h1></a>
    </div>
    <div class="xl:h-[70vh] xl:w-[22vw] mx-[20px]  rounded-xl xs:w-[25%] sm:w-[25%]  ">
-     <a href="https://medium.com/@mishraadis1620/flipkart-reviews-sentiment-analysis-73b0dc632c77"><img class="xl:h-[60vh] xl:w-[38vw] shadow-2xl rounded-xl object-fill  hover:contrast-125 xs:w-[100%] sm:w-[100%]" src="proj_img8.PNG" alt='ii'/>
-     <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%]">Flipkart Review Sentimental Analysis</h1></a>
+     <a href="https://medium.com/@mishraadis1620/flipkart-reviews-sentiment-analysis-73b0dc632c77"><img class="xl:h-[60vh] xl:w-[38vw] shadow-2xl rounded-xl object-fill  hover:contrast-125 xs:w-[100%] xs:h-[80%] sm:w-[100%] sm:h-[80%]" src="proj_img8.PNG" alt='ii'/>
+     <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] xs:py-3 xs:text-4xl sm:py-4 sm:text-4xl">Flipkart Review Sentimental Analysis</h1></a>
    </div>
  <div class="xl:h-[70vh] xl:w-[22vw]  mx-[20px] rounded-xl xs:w-[25%] sm:w-[25%]  ">
-  <a href="https://github.com/aditi1620/AI-Attorney"> <img class="xl:h-[60vh] xl:w-[38vw] shadow-2xl rounded-xl object-fill  hover:contrast-125 xs:w-[100%] sm:w-[100%]" src="proj_img3.png" alt='ii'/>
-   <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%]">Law-Homepage/Signup Page</h1></a>
+  <a href="https://github.com/aditi1620/AI-Attorney"> <img class="xl:h-[60vh] xl:w-[38vw] shadow-2xl rounded-xl object-fill  hover:contrast-125 xs:w-[100%] xs:h-[80%] sm:w-[100%] sm:h-[80%]" src="proj_img3.png" alt='ii'/>
+   <h1 class=" font-bold text-black text-3xl text-center font-outfit xs:w-[100%] xs:py-3 xs:text-4xl sm:py-4 sm:text-4xl">Law-Homepage/Signup Page</h1></a>
  </div>
  </div>
          </section>
